--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -202,7 +202,8 @@
     "approve": "Approve",
     "cancelled": "Cancelled",
     "completed": "Completed",
-    "processing": "Processing"
+    "processing": "Processing",
+    "rejected": "Rejected"
   },
   "navbar": {
     "search_placeholder": "What are you looking for?",
@@ -347,7 +348,31 @@
         "requestsPendingProduction": "Number of Requests Pending Production Process Creation (Daily)",
         "completedProductionProcesses": "Number of Completed Production Processes (Daily)"
       }
-    }
+    },
+    "title_supply_request": "Material Request Dashboard",
+    "total_requests": "Total Requests",
+    "pending": "Pending Approval",
+    "completed": "Completed",
+    "processing_orders": "Orders in Process",
+    "no_processing_orders": "No orders in process",
+    "priority_high": "High Priority",
+    "priority_medium": "Medium Priority",
+    "priority_low": "Low Priority",
+    "recent_orders": "Recent Orders",
+    "filter_day": "By Day",
+    "filter_week": "By Week",
+    "filter_month": "By Month",
+    "table": {
+      "order_id": "Order ID",
+      "request_name": "Request Name",
+      "status": "Status",
+      "quantity": "Quantity",
+      "created_at": "Created At"
+    },
+    "error_fetch_data": "Cannot load dashboard data!",
+    "error_fetch_exception": "Error loading dashboard!",
+    "error_fetch_orders": "Cannot load order list!",
+    "error_fetch_orders_exception": "Error loading order list!"
   },
   "chart": {
     "import": "Import",
@@ -546,5 +571,121 @@
     "required_email": "Please enter an email!",
     "required_phone": "Please enter a phone number!",
     "required_role": "Please select a role!"
+  },
+  "harvest": {
+    "back": "Go Back",
+    "title": "Material Supply Request",
+    "form": {
+      "name": "Request Name",
+      "name_placeholder": "Enter request name...",
+      "fuel_type": "Fuel Type",
+      "fuel_type_placeholder": "Select fuel type",
+      "no_data": "No data available",
+      "image": "Image",
+      "image_placeholder": "Upload your image",
+      "quantity": "Total Quantity (Kg)",
+      "quantity_placeholder": "Enter quantity...",
+      "price": "Price per Kg / Unit (VND)",
+      "price_placeholder": "Enter price...",
+      "start_date_placeholder": "Select start date",
+      "end_date_placeholder": "Select end date",
+      "due_date_placeholder": "Select due date",
+      "priority": "Priority Level",
+      "priority_placeholder": "Select priority",
+      "note": "Note",
+      "note_placeholder": "Enter notes...",
+      "total_price": "Total Price"
+    },
+    "priority": {
+      "high": "High",
+      "medium": "Medium",
+      "low": "Low"
+    },
+    "actions": {
+      "reset": "Reset",
+      "submit": "Submit Request"
+    },
+    "validation": {
+      "empty_name": "Request name cannot be empty!",
+      "empty_fuel_type": "Fuel type is required!",
+      "empty_image": "Fuel image is required!",
+      "empty_quantity": "Quantity is required!",
+      "empty_price": "Price is required!",
+      "empty_start_date": "Please select a start date!",
+      "invalid_start_date": "Start date must be today or later!",
+      "empty_end_date": "Please select an end date!",
+      "empty_due_date": "Please select a due date!",
+      "invalid_end_date": "End date must be after start date!",
+      "invalid_due_date": "Due date must be after end date!",
+      "empty_priority": "Please select a priority level!"
+    },
+    "success": {
+      "created": "Request created successfully!"
+    }
+  },
+  "order": {
+    "back": "Go Back",
+    "title": "Materials to Import",
+    "drawer_title": "Material Collection Order Details",
+    "update_title": "Update Material Collection Order",
+    "form": {
+      "name": "Order Name",
+      "name_placeholder": "Enter order name...",
+      "fuel_type": "Fuel Type",
+      "fuel_type_placeholder": "Select fuel type",
+      "no_data": "No data available",
+      "image": "Image",
+      "upload": "Upload Image",
+      "quantity": "Total Quantity (Kg)",
+      "quantity_placeholder": "Enter quantity...",
+      "price": "Price per Kg / Unit (VND)",
+      "price_placeholder": "Enter price...",
+      "start_date": "Start Date",
+      "end_date": "End Date",
+      "due_date": "Due Date",
+      "date_placeholder": "Select date",
+      "priority": "Priority",
+      "priority_placeholder": "Select priority",
+      "note": "Note",
+      "note_placeholder": "Enter note...",
+      "total_price": "Total Price:"
+    },
+    "priority": {
+      "high": "High",
+      "medium": "Medium",
+      "low": "Low"
+    },
+    "table": {
+      "image": "Product",
+      "request_name": "Request",
+      "quantity_remain": "Remaining",
+      "total_quantity": "Total (Kg)",
+      "start_date": "Start Date",
+      "end_date": "End Date",
+      "status": "Status",
+      "action": "Actions",
+      "no_image": "No Image",
+      "rejected": "Rejected"
+    },
+    "modal": {
+      "delete_title": "Delete Request",
+      "delete_confirm": "Are you sure you want to delete this product?",
+      "update_title": "Confirm Update",
+      "update_confirm": "Are you sure you want to update this order?",
+      "accept_title": "Confirm Approval",
+      "accept_confirm": "Are you sure you want to approve this order?",
+      "cancel_title": "Confirm Cancel",
+      "cancel_confirm": "Are you sure you want to cancel this order?"
+    },
+    "actions": {
+      "update": "Update",
+      "accept": "Approve",
+      "cancel": "Cancel Request"
+    },
+    "toast": {
+      "no_order_selected": "No order selected for cancellation!",
+      "cancel_success": "Order cancelled successfully!",
+      "cancel_failed": "Failed to cancel order!"
+    }
   }
 }
